src/test/deca/context/invalid/created/decl_bool_eq_int.deca
{
bool a = 1; //10 n'est pas un bool
}